--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>Portofolio Saya</h1>
+      <h1>Portofolio</h1>
       <button class="theme-toggle" id="themeToggle">🌙</button>
       <!-- HAMBURGER -->
       <div class="hamburger" id="hamburger">
